fix spacing in home section

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -121,7 +121,7 @@ img {
 }
 
 .section {
-  padding-block: 2.5rem;
+  padding-block: 1.5rem 2.5rem;
   width: 100%;
 }
 
